# sigame_tools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
sigame_tools/: __init__.py  cli.py  datatypes.py  helper.py
