[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SIGameTools"
authors = [
    {name = "Lgmrszd", email = "lgmrszd@gmail.com"}
]
description = "Tools to work with SIGame "
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cli"]
license = {text = "GNU LGPL"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
#    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
sigame-tools = "sigame_tools.cli:main"

[tool.setuptools]
#packages=["sigame_tools"]

[tool.setuptools.dynamic]
version = {attr = "sigame_tools.VERSION"}
